build: JDK 8 toolchain 전환 + gradle wrapper 커밋
- java toolchain(8) + foojay resolver로 로컬 JDK 무관하게 빌드
- gradle wrapper 8.14.3 파일 추적 시작
- UserService: List.of → Arrays.asList (Java 8 호환)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>